--- a/templates/cutting.html
+++ b/templates/cutting.html
@@ -109,7 +109,7 @@
     </div>
   </div>
   <script>
-    const API_URL = "http://localhost:8000/api/pipes";
+    const API_URL = "/api/pipes";
     let soGrouped = {}, allSO = [];
 
     async function loadFromSheet() {
